feat: integrate BlueKun agent workspace